--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: CI
+name: AshFlix CI
 
 on:
   push:
@@ -7,23 +7,38 @@ on:
     branches: [ "main" ]
 
 jobs:
-  checks:
+  build:
     runs-on: ubuntu-latest
 
+    strategy:
+      matrix:
+        node-version: [20.x]
+
     steps:
-      - name: Checkout repository
+      - name: Checkout repo
         uses: actions/checkout@v4
 
-      - name: Set up Node.js
+      - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: "20"
+          node-version: ${{ matrix.node-version }}
+          cache: 'npm'
 
-      - name: Placeholder frontend checks
-        run: echo "Frontend checks will go here"
+      # Frontend
+      - name: Install frontend dependencies
+        working-directory: ./frontend
+        run: npm ci
 
-      - name: Placeholder backend checks
-        run: echo "Backend checks will go here"
+      - name: Build frontend
+        working-directory: ./frontend
+        run: npm run build
 
-      - name: Placeholder security scans
-        run: echo "Security scans will go here"
+      # Backend
+      - name: Install backend dependencies
+        working-directory: ./backend
+        run: npm ci
+
+      - name: Build backend
+        working-directory: ./backend
+        run: npm run build
+
