--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,21 +22,21 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
-          cache: 'npm'
+          cache: npm
 
-      # Frontend
+      # ---------- Frontend ----------
       - name: Install frontend dependencies
         working-directory: ./frontend
-        run: npm ci
+        run: npm install --legacy-peer-deps
 
       - name: Build frontend
         working-directory: ./frontend
         run: npm run build
 
-      # Backend
+      # ---------- Backend ----------
       - name: Install backend dependencies
         working-directory: ./backend
-        run: npm ci
+        run: npm install --legacy-peer-deps
 
       - name: Build backend
         working-directory: ./backend
