--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,10 +10,6 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        node-version: [20.x]
-
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
@@ -21,11 +17,16 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: ${{ matrix.node-version }}
-          cache: npm
+          node-version: 20.x
 
-      # ---------- Frontend ----------
-      - name: Install frontend dependencies
+      # ---------- FRONTEND ----------
+      - name: Cache frontend deps
+        uses: actions/cache@v3
+        with:
+          path: frontend/node_modules
+          key: ${{ runner.os }}-frontend-${{ hashFiles('frontend/package-lock.json') }}
+
+      - name: Install frontend deps
         working-directory: ./frontend
         run: npm install --legacy-peer-deps
 
@@ -33,8 +34,14 @@ jobs:
         working-directory: ./frontend
         run: npm run build
 
-      # ---------- Backend ----------
-      - name: Install backend dependencies
+      # ---------- BACKEND ----------
+      - name: Cache backend deps
+        uses: actions/cache@v3
+        with:
+          path: backend/node_modules
+          key: ${{ runner.os }}-backend-${{ hashFiles('backend/package-lock.json') }}
+
+      - name: Install backend deps
         working-directory: ./backend
         run: npm install --legacy-peer-deps
 
