--- a/.gitignore
+++ b/.gitignore
@@ -1,35 +1,28 @@
-# OS / Editor junk
-.DS_Store
-Thumbs.db
-.vscode/
-.idea/
-
-# Logs
-*.log
-
-# Node / Frontend
+# Node
 node_modules/
 dist/
-build/
-.cache/
 .vite/
-coverage/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
-# Env / secrets
+# Env
 .env
 .env.*
-*.pem
-*.key
+!.env.example
 
 # Terraform
-*.tfstate
-*.tfstate.*
-.terraform/
+**/.terraform/
+**/.terraform.lock.hcl
+**/*.tfstate
+**/*.tfstate.*
 crash.log
-crash.*.log
-terraform.tfvars
-*.tfvars
 override.tf
 override.tf.json
 *_override.tf
 *_override.tf.json
+
+# OS/Editor
+.DS_Store
+.idea/
+.vscode/
