--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,6 @@
-version: "3.9"
-
 services:
   ashflix-backend:
+    build: ./backend
     image: ashflix-backend:latest
     container_name: ashflix-backend
     ports:
@@ -9,6 +8,7 @@ services:
     restart: unless-stopped
 
   ashflix-frontend:
+    build: ./frontend
     image: ashflix-frontend:latest
     container_name: ashflix-frontend
     ports:
@@ -16,4 +16,3 @@ services:
     depends_on:
       - ashflix-backend
     restart: unless-stopped
-
